fail_crate/tests/duplicate_const.rs
use inew::New;

#[derive(New)]
#[new(const, const)]
struct A;

fn main() {}
